--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>О себе</h2>
                 <div class="summary">
                     <p>Привет! Один раз я услышал хорошу вещь: "Найдите себе работу по душе, и вам не придется работать ни дня в своей жизни". Поэтому я решил найти то, что мне действительно нравится. Именно поэтому я тут, а вы - здесь!</p>
-                    <p>Желаемая должность - Ruby/RoR Junior разработчик. Полная занятость.</p>
+                    <p>Желаемая должность - Ruby/RoR разработчик. Полная занятость.</p>
                     <p>Готов к коммандировкам и релокации хоть на край света.</p>
                     <p>Имею неплохой бэкграунд в производственной сфере, поэтому прекрасно понимаю что такое грамотно отлаженные процессы. Уже многое знаю, а чего не знаю - найду или тактично спрошу у коллег. Умею работать в команде и хочу профессионально развиваться в этом океане IT.</p>
                     <p></p>
@@ -85,7 +85,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Junior Ruby/RoR Developer</h3>
+                            <h3 class="job-title">Ruby/RoR Developer</h3>
                             <div class="time">2021 - по н.в.</div>
                         </div><!--//upper-row-->
                         <div class="company">Возможно, именно ваша компания ;-)</div>
@@ -132,7 +132,7 @@
                         <div class="company">Свеза Санкт-Петербург, www.sveza.ru</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Систематизация и автоматизация отчетов (Exel) производств. Составление отчётности по выработке производства, простоям и ОЭО оборудования (неделя, месяц, квартал); составление СОП (стандартной операционной процедуры); разработка и согласование инструкций по охране труда, должностных инструкций и папок производственного обучения; участие в развитии 5С на производстве - зонирование участков, составление графиков чисток, отслеживание динамики по оборудованию; участие в проектах бережливого производства и оптимизации производственных процессов; участие в пилотных проектах внедрения автономного обслуживания на производстве, участие и методологическая помощь в Кайдзен-командах; составление заказов и расширение материалов в sap erp; заказ услуг для производства (аутстаффинг), составление ТЗ, актов выполненных работ, проводка в SAP, закрытие и оплата оказанных услуг за период; участие в разработке документов и внедрении TPM в условиях действующего производства; участие в лабораторных работах на производстве, выявление "узких мест". </p>
+                        <p>Систематизация и автоматизация отчетов (Exel) производств. Составление отчётности по выработке производства, простоям и ОЭО оборудования; участие в проектах бережливого производства и оптимизации производственных процессов; участие и методологическая помощь в Кайдзен-командах; работа с sap erp; составление ТЗ и актов выполненных работ; участие в лабораторных работах на производстве, выявление "узких мест". </p>
                     </div><!--//details-->
                 </div><!--//item-->
                 
