--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <p>Настрою отправку почты через <mark>SendGrid API</mark> и выведу почту в фон через <mark>resque</mark> и <mark>redis</mark>;</p>
                     <p>Базовые знания написания тестов на <mark>rspec</mark>, <mark>capybara</mark>, <mark>factory_bot</mark>;</p>
                     <p>Напишу пару простых <mark>SQL</mark> запросов;</p>
-                    <p>Проведу деплой на <mark>VPS</mark> или <mark>heroku</mark>. Настрою автоматический деплой через <mark>capistrano</mark>;</p>
+                    <p>Проведу деплой на <mark>VPS</mark> или <mark>heroku</mark>. Настрою деплой через <mark>capistrano</mark>;</p>
                     <p>И локализую через <mark>i18n</mark>;</p>
                     <p>Закомичю и запушу, сделаю PR. <mark>Git</mark> люблю и уважаю</p>
                 </div><!--//details-->
