--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>О себе</h2>
                 <div class="summary">
-                    <p>Привет! Один раз я услышал хорошу вещь: "Найдите себе работу по душе, и вам не придется работать ни дня в своей жизни". Поэтому я решил найти то, что мне действительно нравится. Именно поэтому я тут, а вы - здесь!</p>
+                    <p>Привет! Один раз я услышал хорошую вещь: "Найдите себе работу по душе, и вам не придется работать ни дня в своей жизни". Поэтому я решил найти то, что мне действительно нравится. Именно поэтому я тут, а вы - здесь!</p>
                     <p>Желаемая должность - Ruby/RoR разработчик. Полная занятость.</p>
                     <p>Готов к коммандировкам и релокации хоть на край света.</p>
                     <p>Имею неплохой бэкграунд в производственной сфере, поэтому прекрасно понимаю что такое грамотно отлаженные процессы. Уже многое знаю, а чего не знаю - найду или тактично спрошу у коллег. Умею работать в команде и хочу профессионально развиваться в этом океане IT.</p>
@@ -119,7 +119,9 @@
                         <div class="company">Свеза Санкт-Петербург, www.sveza.ru</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Анализ и поиск первопричин возникновения брака. Выработка и внедрение мероприятий. Обучение сотрудников внедряемым инструментам. </p>
+                        <p>Анализ и поиск первопричин возникновения брака. Выработка и внедрение мероприятий. Обучение сотрудников внедряемым инструментам.
+                            За время проекта мною была выявлена и устранена ошибка в технологическом процессе на одном из переделов, в результате которой производство систематически получало брак на высокомаржинальной продукции. Результат - снижение процента брака на высокомаржинальной продукции с 3,4 до 1,2 %. Снижение претензий от заказчика на ГП.
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -132,7 +134,9 @@
                         <div class="company">Свеза Санкт-Петербург, www.sveza.ru</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Систематизация и автоматизация отчетов (Exel) производств. Составление отчётности по выработке производства, простоям и ОЭО оборудования; участие в проектах бережливого производства и оптимизации производственных процессов; участие и методологическая помощь в Кайдзен-командах; работа с sap erp; составление ТЗ и актов выполненных работ; участие в лабораторных работах на производстве, выявление "узких мест". </p>
+                        <p>Cистематизировал и автоматизировал отчеты выработки цехов. Более 4 независимых отчетов были консолидированы в автособираемый еженедельный отчёт руководителя. Сократил времязатраты на подготовку еженедельного отчета с 5-8 часов до одного часа. Разработал и внедрил систему (Exel), систематизирующую первичную документацию производства (бланки, чек-листы, заявления) и упрощающую доступ к наиболее важным ресурсам на сервере предприятия; подготовка производства к аудитам по технологии, качеству и бизнес-системы. Успешное прохождение аудитов производством с оценкой не менее 4/5; активное участие в развитии 5С на производстве; участие в проектах бережливого производства и оптимизации производственных процессов; участие в пилотных проектах внедрения автономного обслуживания на производстве; участие и методологическая помощь в Кайдзен-командах; работа в sap erp; составление ТЗ, актов выполненных работ, закрытие и оплата оказанных услуг за период; разработка документов и внедрении TPM в условиях действующего производства; проведение лабораторных работах на производстве, выявление "узких мест". В совершенстве овладел навыками коммуникации, смог найти общий язык почти с любым человеком - от рабочего до финансового директора.
+
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
                 
