--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="company">Свеза Санкт-Петербург, www.sveza.ru</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Анализ и поиск первопричин возникновения брака. Выработка и внедрение мероприятий. Обучение сотрудников внедряемым инструментам.</p>
+                        <p>Анализ и поиск первопричин возникновения брака. Выработка и внедрение мероприятий. Обучение сотрудников внедряемым инструментам.</p><br><br>
                         <p>За время проекта мною была выявлена и устранена ошибка в технологическом процессе на одном из переделов, в результате которой производство систематически получало брак на высокомаржинальной продукции. Результат - снижение процента брака на высокомаржинальной продукции с 3,4 до 1,2 %. Снижение претензий от заказчика на ГП.</p>
                     </div><!--//details-->
                 </div><!--//item-->
@@ -133,10 +133,10 @@
                         <div class="company">Свеза Санкт-Петербург, www.sveza.ru</div>
                     </div><!--//meta-->
                     <div class="item">
-                        <p>Cистематизировал и автоматизировал отчеты выработки цехов. Более 4 независимых отчетов были консолидированы в автособираемый еженедельный отчёт руководителя. Сократил времязатраты на подготовку еженедельного отчета с 5-8 часов до одного часа.</p>
-                        <p>Разработал и внедрил систему (Exel), систематизирующую первичную документацию производства (бланки, чек-листы, заявления) и упрощающую доступ к наиболее важным ресурсам на сервере предприятия;</p>
-                        <p>Готовил производство к аудитам по технологии, качеству и бизнес-системы. Успешное прохождение аудитов производством с оценкой не менее 4/5;</p>
-                        <p>Активное участие в развитии 5С на производстве; участие в проектах бережливого производства и оптимизации производственных процессов; участие в пилотных проектах внедрения автономного обслуживания на производстве; участие и методологическая помощь в Кайдзен-командах; работа в sap erp; составление ТЗ, актов выполненных работ, закрытие и оплата оказанных услуг за период; разработка документов и внедрении TPM в условиях действующего производства; проведение лабораторных работах на производстве, выявление "узких мест".</p>
+                        <p>Cистематизировал и автоматизировал отчеты выработки цехов. Более 4 независимых отчетов были консолидированы в автособираемый еженедельный отчёт руководителя. Сократил времязатраты на подготовку еженедельного отчета с 5-8 часов до одного часа.</p><br><br>
+                        <p>Разработал и внедрил систему (Exel), систематизирующую первичную документацию производства (бланки, чек-листы, заявления) и упрощающую доступ к наиболее важным ресурсам на сервере предприятия;</p><br><br>
+                        <p>Готовил производство к аудитам по технологии, качеству и бизнес-системы. Успешное прохождение аудитов производством с оценкой не менее 4/5;</p><br><br>
+                        <p>Активное участие в развитии 5С на производстве; участие в проектах бережливого производства и оптимизации производственных процессов; участие в пилотных проектах внедрения автономного обслуживания на производстве; участие и методологическая помощь в Кайдзен-командах; работа в sap erp; составление ТЗ, актов выполненных работ, закрытие и оплата оказанных услуг за период; разработка документов и внедрении TPM в условиях действующего производства; проведение лабораторных работах на производстве, выявление "узких мест".</p><br><br>
                         <p>В совершенстве овладел навыками коммуникации, смог найти общий язык почти с любым человеком - от рабочего до финансового директора.</p>
                     </div><!--//details-->
                 </div><!--//item-->
