--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
                     <span class="project-title"><a href="https://ilyaaskme.herokuapp.com/" target="_blank">AskMe</a></span> -
                     <span class="project-tagline"> Приложение-клон известного сайта, в котором пользователи могут задавать вопросы и отвечать на них. </span>
                 </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><a href="https://employee-dir-kis.herokuapp.com/positions" target="_blank">Справочник организации</a></span> -
+                    <span class="project-tagline"> Справочник организации с использованием pundit, rolify и axlsx_rails. </span>
+                </div><!--//item-->
             </section><!--//section-->
             
             <section class="skills-section section">
