--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
                     <li class="skype"><i class="fa fa-skype"></i><a href="https://join.skype.com/invite/kFx6FkFV56F3" target="_blank">Илья Кокорев</a></li>
                 </ul>
             </div><!--//contact-container-->
+
+            <div class="interests-container container-block">
+                <h2 class="container-block-title">Pet Projects</h2>
+                <ul class="list-unstyled interests-list">
+                    <li><a href="http://neverends.space">Neverends Space</a></li>
+                </ul>
+            </div><!--//interests-->
+
             <div class="education-container container-block">
                 <h2 class="container-block-title">Образование</h2>
                 <div class="item">
@@ -64,7 +72,6 @@
                     <li>Эублефары</li>
                 </ul>
             </div><!--//interests-->
-            
         </div><!--//sidebar-wrapper-->
         
         <div class="main-wrapper">
